kubefiles/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: jaysonmy
  labels:
    app: todo    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: todo
  type: LoadBalancer
