kubefiles/route-todoapp.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: todoapproute
  labels:
    app: todo
    app.kubernetes.io/instance: todoapp
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: jaysonmy
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
